# RadarHSExMISIS

./: .gitignore  Makefile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/config/: default.py
backend/app/database/alembic/versions/: 1f3aa75d9326_change_news.py  a0ded367c1fb_add_channel_and_message_num_to_post.py  a3030ea569c6_news_model.py  cdd7c8230db3_tz_to_date_in_post.py  cff61c3f21cd_init.py  d9a0eb58166b_remove_old_from_user.py  e568daeeb580_add_news_post_channel_models.py
backend/app/database/connection/: __init__.py  session.py
backend/app/database/models/: __init__.py  news.py  post.py  tg_channel.py  user.py
backend/app/endpoints/: __init__.py  admin.py  news.py  tg_channel.py
backend/app/schemas/: __init__.py  news.py  registration.py  tg_channel.py  user.py
backend/app/utils/: agents.py  ai_config.py  ai_generation.py  convert.py  convert_agent.py  finbert.py  llm_client.py  llm_client_test.py  news.py  report.py  telegram_news_parser.py  test_tg_parser.py  tg_channel.py  tg_fetch.py  user.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/finance-news-app/src/data/: mockData.js
frontend/finance-news-app/src/store/: newsStore.js
frontend/src/: App.css  App.jsx
frontend/src/components/LeftPanel/: LeftPanel.css
frontend/src/components/NewsFeed/: NewsFeed.css  NewsFeed.jsx
frontend/src/services/: api.js
frontend/src/store/: newsStore.js
frontend/src/utils/: helpers.js
(+7 files in other folders)
